--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ro">
   <head>
-    <!-- SEO -->
+    <!-- SEEO -->
     <meta charset="utf-8" />
     <title>MathApp</title>
     <base href="/" />
