--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#00214d" />
     <meta name="msapplication-TileColor" content="#fde24f" />
-    <link rel="manifest" href="/site.webmanifest" />
+    <!-- <link rel="manifest" href="/site.webmanifest" /> -->
     <meta name="apple-mobile-web-app-title" content="MatePlus.ro - @TODO" />
     <meta name="application-name" content="MatePlus.ro" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -51,8 +51,7 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-touch-fullscreen" content="yes" />
     <meta name="theme-color" content="#fde24f" />
-    <link rel="preload" href="@TODO" as="font" type="font/woff2" crossorigin />
-    <link rel="stylesheet" href="style/style.css" media="all" />
+    <!-- <link rel="preload" href="@TODO" as="font" type="font/woff2" crossorigin /> -->
   </head>
   <body>
     <app-root></app-root>
