--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>MathApp</title>
-    <base href="/" />
+    <base href="/MatePlus" />
 
     <!-- SEO -->
     <meta name="description" content="@TODO" />
